# dataset

./: .env.example  .gitignore  check.txt  guide.md  joins.md  label_map.json  metrics-log-mt5-small-1748894297.csv  metrics-log-rut5-base-1749063744.csv  metrics-log-rut5-small-1749036296.csv  metrics_log-1748455560.csv  metrics_log-1748458971.csv  metrics_log-1748461271.csv  metrics_log.csv  model_new_ruBERT-tiny2.py  model_use.py  pyproject.toml
dataset/: main.py
helpdesk_dataset/: enhanced_inference.py  learn.py  learn_wkb.py  load_kb.py  main.py  main_rag.py  query.py  rag_engine.py  rut5.py  without_kb.py
logs/: metrics-log-mt5-base-1748886380.csv  metrics-log-mt5-small-1748887208.csv  metrics-log-ruDialoGPT-small-1749234786.csv  metrics-log-rugpt3small_based_on_gpt2-1749119874.csv  metrics-log-rugpt3small_based_on_gpt2-1749122889.csv  metrics-log-rugpt3small_based_on_gpt2-1749158114.csv  metrics-log-rugpt3small_based_on_gpt2-1749189008.csv  metrics-log-rut5-base-1748468455.csv  metrics-log-rut5-base-1748510678.csv  metrics-log-rut5-base-1748514366.csv  metrics-log-rut5-base-1748521139.csv  metrics-log-rut5-base-1748537044.csv  metrics-log-rut5-base-1748541695.csv  metrics-log-rut5-base-1748546264.csv  metrics-log-rut5-base-1748548157.csv  metrics-log-rut5-base-1748549922.csv  metrics-log-rut5-base-1748551699.csv  metrics-log-rut5-base-1748551905.csv  metrics-log-rut5-base-1748553669.csv  metrics-log-rut5-base-1748553998.csv  metrics-log-rut5-base-1748576964.csv  metrics-log-rut5-base-1748605681.csv  metrics-log-rut5-base-1748607400.csv  metrics-log-rut5-base-1748664788.csv  metrics-log-rut5-base-1748673976.csv  metrics-log-rut5-base-1748769143.csv  (+9 more)
test/: load_kb.py  (+5 more)
(+28 files in other folders)
