[project]
name = "helpdesk_dataset"
version = "0.1.0"
description = ""
authors = [
    {name = "Snack",email = "nurd_galim@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "pymysql (>=1.1.1,<2.0.0)",
    "html2text (>=2025.4.15,<2026.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "datasets (>=3.5.0,<4.0.0)",
    "numpy (>=2.2.5,<3.0.0)",
    "torch (>=2.7.0,<3.0.0)",
    "sentencepiece (>=0.2.0,<0.3.0)",
    "accelerate (>=1.6.0,<2.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "transformers (>=4.51.3,<5.0.0)",
    "protobuf (>=6.30.2,<7.0.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "rouge-score (>=0.1.2,<0.2.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    "sentence-transformers (>=4.1.0,<5.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "helpdesk_dataset.main:main"
learn = "helpdesk_dataset.learn:main"
